Serve assets locally

--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <video class="bg-video" src="https://beam.pro/_latest/video/home.webm" autoplay loop></video>
+    <video class="bg-video" src="/images/home.webm" autoplay loop></video>
 
     <div class="content">
-      <img class="logo" src="https://raw.githubusercontent.com/WatchBeam/beam-branding-kit/master/logos/png/beam_logo_white.png">
+      <a href="https://beam.pro">
+        <img class="logo" src="/images/main-logo-white.png">
+      </a>
       <div class="code"></div>
-      <div class="hint">OAuth Token Above</div>
+      <div class="hint">Copy this token into your Game's configuration!</div>
     </div>
 
     <script src="app.js"></script>
