Fixed webroot-absolute image resource paths

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <video class="bg-video" src="/images/home.webm" autoplay loop></video>
+    <video class="bg-video" src="images/home.webm" autoplay loop></video>
 
     <div class="content">
       <a href="https://beam.pro">
-        <img class="logo" src="/images/main-logo-white.png">
+        <img class="logo" src="images/main-logo-white.png">
       </a>
       <div class="code"></div>
       <div class="hint">Copy this token into your Game's configuration!</div>
