--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Beam Interactive Authentication</title>
+    <title>Mixer Interactive Authentication</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet" type="text/css">
   </head>
@@ -9,11 +9,14 @@
     <video class="bg-video" src="images/home.webm" autoplay loop></video>
 
     <div class="content">
-      <a href="https://beam.pro">
+      <a href="https://mixer.com">
         <img class="logo" src="images/main-logo-white.png">
       </a>
       <div class="code"></div>
-      <div class="hint">Copy this token into your Game's configuration!</div>
+      <div class="hint">
+        <span class="onsuccess">Copy this token into your Game's configuration!</span>
+        <span class="onerror">Check the manual at <a href="https://github.com/mixer/implicit-oauth-example" target="_blank">GitHub</a>.</span>
+      </div>
     </div>
 
     <script src="app.js"></script>
