--- a/index.html
+++ b/index.html
@@ -6,11 +6,9 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <video class="bg-video" src="images/home.webm" autoplay loop></video>
-
     <div class="content">
       <a href="https://mixer.com">
-        <img class="logo" src="images/main-logo-white.png">
+        <img class="logo" src="images/main-logo.png">
       </a>
       <div class="code"></div>
       <div class="hint">
